2025-04-22T00:52:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14584284052 # 621
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-22
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 807 1285 / 817 1295
* notice: next accum: outdated-unq outdated-all / unq all: 808 1286 / 818 1296
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-08] / [2025-04-21]

2025-04-21T00:55:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14565043086 # 620
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-21
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 807 1285 / 816 1294
* notice: next accum: outdated-unq outdated-all / unq all: 807 1285 / 817 1295
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-20]

2025-04-20T00:56:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14554456845 # 619
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-20
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 806 1284 / 815 1293
* notice: next accum: outdated-unq outdated-all / unq all: 807 1285 / 816 1294
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-06] / [2025-04-19]

2025-04-19T00:49:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14543993157 # 618