@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-22T00:52:18Z",
-  "count_outdated" : 1286,
-  "uniques_outdated" : 808,
-  "count" : 1296,
-  "uniques" : 818,
+  "timestamp" : "2025-04-23T00:52:27Z",
+  "count_outdated" : 1287,
+  "uniques_outdated" : 809,
+  "count" : 1298,
+  "uniques" : 820,
   "clones" : [
-    {
-      "timestamp": "2025-04-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-10T00:00:00Z",
       "count": 1,
@@ -94,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-22T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
