@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 2,
+  "count": 11,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-04-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-10T00:00:00Z",
       "count": 1,
@@ -51,6 +46,11 @@
       "timestamp": "2025-04-21T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-22T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
